<resources>
    <string name="app_name">Calculadora IMC</string>
    <string name="title">Vamos calcular seu IMC!</string>
    <string name="peso_q">Qual o seu peso em kg?</string>
    <string name="peso_a">Informe seu peso</string>
    <string name="altura_q">Qual a sua altura em m?</string>
    <string name="altura_a">Informe a sua altura</string>
    <string name="btn_calcular">Calcular IMC</string>
    <string name="resultado">Seu IMC é:</string>
    <string name="situacao1">Você está com sobrepeso.</string>
    <string name="situacao2">Você está com peso saudável!</string>
    <string name="situacao3">Você está abaixo do peso.</string>
</resources>
