<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorAccent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/peso_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="120dp"
        android:background="@color/colorPrimary"
        android:text="@string/peso_q"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/i_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:text="@string/peso_a"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/peso_q"
        app:layout_constraintStart_toEndOf="@+id/peso_q"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/altura_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimary"
        android:text="@string/altura_q"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/peso_q"
        app:layout_constraintStart_toStartOf="@+id/peso_q"
        app:layout_constraintTop_toBottomOf="@+id/peso_q" />

    <EditText
        android:id="@+id/i_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/altura_a"
        android:textSize="16sp"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="@+id/altura_q"
        app:layout_constraintStart_toEndOf="@+id/altura_q"
        app:layout_constraintTop_toBottomOf="@+id/i_peso"
        tools:ignore="LabelFor"/>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_calcular"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i_altura" />

    <TextView
        android:id="@+id/text_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="25sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/altura_q"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:textSize="25sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_resultado"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>